2014-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Another CRT_INLINE function implementation rationalization.

	* include/inttypes.h (imaxabs): Specify as __LIBIMPL__; declare...
	(llabs): ...this, to be implemented as its __LIBIMPL__ alias.
	[__cplusplus] (_BEGIN_C_DECLS, _END_C_DECLS): Use these.

	* Makefile.in (libimpl_sed_script): Handle ALIAS attribute.
	(libmingwex.a): Delete obsolete dependency on...
	(imaxabs.$OBJEXT): ...this.

	* mingwex/imaxabs.c: File is now redundant; delete it.

2014-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	More rationalization of CRT_INLINE function implementations.

	* include/stdio.h (fopen64): Add __JMPSTUP__ specification.
	(ftello64): Add __LIBIMPL__ specification for extern implementation.
	[__cplusplus] (_BEGIN_C_DECLS, _END_C_DECLS): Use these.

	* mingwex/stdio/fopen64.c: File is now redundant; delete it.
	* mingwex/stdio/ftell064.c: Likewise.

	* Makefile.in (libmingwex.a): Delete obsolete dependencies on...
	(fopen64.$OBJEXT, ftello64.$OBJEXT): ...these.

2014-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Don't implicitly define _POSIX_C_SOURCE too early.

	* include/_mingw.h (_POSIX_C_SOURCE): Delay implict definition.
	(__USE_MINGW_ANSI_STDIO): This must be initialized first, to ensure
	that it is not accidentally activated by implied _POSIX_C_SOURCE.

2014-12-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct complex arcsin computation per issue [#2245].

	* mingwex/complex/casin_generic.c: New file; it replaces...
	* mingwex/complex/casin.c: ...this; it is now obsolete; delete it.
	* mingwex/complex/casinf.c mingwex/complex/casinl: Likewise.

2014-12-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct complex square root computation per issue [#2246].

	* include/math.h (hypotf): Redirect __CRT_INLINE call to...
	(_hypot): ...this MSVCRT.DLL exported function, so avoiding...
	(hypot): ...this libmoldname.a indirection.
